# ReCallMe-backend-svc

./: Dockerfile  README.md  api.txt  app.py  db-search.py  deploy.sh  inference.py  object-detection.py  package-lock.json  package.json  pyproject.toml  test-llm.py  video-capture-v1.py  video-capture.py
.github/workflows/: deploy.yml
api/: index.js
content/transcript/live_stream_content_20241026_141557/: live_stream_content_20241026_141557.json
db/: db_config.py  db_helper.py
db/migrations/: V1__initial_schema.sql
llm_handler/: anthropic_handler.py  anthropic_react_handler.py  gemini_handler.py
utilities/: constants.py
vision/: frame_extraction.py  frame_processing.py  frame_summarisation.py  processed_video.py  questions.py
webserver/: api_models.py  endpoints.py
