[tool.poetry]
name = "ReCallMe"
version = "0.1.0"
description = ""
authors = ["Raakhal Rapolu <raakhal.rapolu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-restx = "^1.3.0"
flask-swagger-ui = "^4.11.1"
taskipy = "^1.14.0"
flask-cors = "^5.0.0"
requests = "^2.32.3"
llama-index-llms-anthropic = "^0.3.8"
llama-index = "^0.11.20"
llama-index-embeddings-huggingface = "^0.3.1"
anthropic = "^0.37.1"


[tool.taskipy.tasks]
recall-svc-backend = { cmd = 'python app.py', help = 'Runs the application' }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"